--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./css/index.css" />
-        <title>JS starter</title>
-    </head>
-    <body>
-        <script src="./src/index.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>To Do List</title>
+    <link rel="stylesheet" href="./css/index.css" />
+  </head>
+  <body>
+    <header class="main-header">To Do List</header>
+    <div class="main-container">
+      <div class="input-container">
+        <input type="text" placeholder="Enter something" class="main-input">
+        <button class="submit-button">Add</button>
+      </div>
+      <ul class="main-list"></ul>
+    </div>
+    <script src="./src/index.js"></script>
+  </body>
 </html>
